--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 /* Map */
 .full-map #map {
-	height: 100vh
+	height: 100vh;
 }
 
 /* Search */
@@ -47,10 +47,11 @@
 /* Marker */
 .marker-style {
 	text-align: center;
-	width: 20px;
-	height: 20px;
-	margin-left: -10px !important;
-	margin-top: -50px !important
+	width: 30px;
+	height: 30px;
+	margin-left: -15px !important;
+	margin-top: -55px !important;
+	border-radius: 50%;
 }
 .marker-style img {
 	position: absolute !important;
@@ -58,7 +59,19 @@
 	bottom: 0px !important;
 	right: 0px;
 	left: 0px;
-	margin: auto !important
+	width: 30px !important;
+	height: 30px !important;
+	border-radius: 50%;
+	margin: auto !important;
+}
+
+.cluster > div {
+	color: #333 !important;
+	text-align: center !important;
+	font-size: 12px !important;
+	z-index: 3;
+	line-height: 50px !important;
+	width: 64px !important;
 }
 
 /* Info Box */
@@ -77,7 +90,7 @@
 	overflow: hidden;
 	margin-bottom: 30px;
 	width: 100%;
-	border: 1px solid #e5e5e5
+	border: 1px solid #e5e5e5;
 }
 
 .infobox-wrapper::before {
@@ -92,7 +105,7 @@
 	border-left: 10px solid transparent;
 	bottom: 60px;
 	z-index: 10;
-	left: 40%
+	left: 40%;
 }
 .infobox-wrapper > img {
 	position: absolute;
@@ -101,7 +114,7 @@
 	top: 30px;
 	right: 10px;
 	opacity: 0.9;
-	z-index: 10
+	z-index: 10;
 }
 
 .people-name {
@@ -115,7 +128,7 @@
 	white-space: nowrap;
 	margin-top: -5px;
 	display: inline-block;
-	width: 100%
+	width: 100%;
 }
 
 .infobox-wrapper .people-address {
