--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,9 @@
 	background: #fff;
 	margin-left: -27px;
 	width: 260px;
-	margin-bottom: 80px;
+	margin-bottom: 79px;
 	position: relative;
-	border: 1px solid #ddd;
+	box-shadow: 1px 1px 5px 1px #cecece;
 	border-radius: 4px;
 	padding: 5px;
 }
